# mtg_commander_leaderboard

./: .gitattributes  .gitignore  prompt_plan.md  pyproject.toml  spec.md  todo.md
app/: admin.py  app.py  auth.py  db.py  elo.py  game.py  history.py  leaderboard.py  run.py  scryfall.py
data/: commander.db
tests/: test_admin.py  test_auth.py  test_db.py  test_elo.py  test_game.py  test_scryfall.py
