[project]
name = "mtg-commander-leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "pytest-coverage>=0.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]
